- renamed networks of examples from variances of "sim" to more meaningful and consistent names - renamed executables for examples from "MiXiM" to <name of example>

--- a/.project
+++ b/.project
@@ -21,7 +21,7 @@
 			<arguments>
 				<dictionary>
 					<key>?children?</key>
-					<value>?name?=outputEntries\|?children?=?name?=entry\\\\\\\\\\\\\\\|\\\\\\\|\||</value>
+					<value>?name?=outputEntries\|?children?=?name?=entry\\\\\\\|\\\|\||</value>
 				</dictionary>
 				<dictionary>
 					<key>?name?</key>
