--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -2,148 +2,148 @@
 cmdenv-config-name = perftest
 cmdenv-express-mode = true
 ned-path = ../../base;../../modules;../../examples;
-network = phySim
+network = CSMAMac
 
 
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
 tkenv-default-config = 
-phySim.**.coreDebug = false
-phySim.playgroundSizeX = 300m
-phySim.playgroundSizeY = 400m
-phySim.playgroundSizeZ = 300m
-phySim.numHosts = 3
+CSMAMac.**.coreDebug = false
+CSMAMac.playgroundSizeX = 300m
+CSMAMac.playgroundSizeY = 400m
+CSMAMac.playgroundSizeZ = 300m
+CSMAMac.numHosts = 3
 
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-phySim.world.useTorus = false
-phySim.world.use2D = false
+CSMAMac.world.useTorus = false
+CSMAMac.world.use2D = false
 
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-phySim.connectionManager.debug = false
-phySim.connectionManager.sendDirect = false
-phySim.connectionManager.pMax = 100mW
-phySim.connectionManager.sat = -90dBm
-phySim.connectionManager.alpha = 3
-phySim.connectionManager.carrierFrequency = 2.412e+9Hz
+CSMAMac.connectionManager.debug = false
+CSMAMac.connectionManager.sendDirect = false
+CSMAMac.connectionManager.pMax = 100mW
+CSMAMac.connectionManager.sat = -90dBm
+CSMAMac.connectionManager.alpha = 3
+CSMAMac.connectionManager.carrierFrequency = 2.412e+9Hz
 
 ##########################################################
 #             Host specific parameters                   #
 ##########################################################
-phySim.node[*].nic.connectionManagerName = "connectionManager"
+CSMAMac.node[*].nic.connectionManagerName = "connectionManager"
 
 
 ################ PhyLayer parameters #####################
-phySim.node[*].nic.phy.usePropagationDelay = false
-phySim.node[*].nic.phy.thermalNoise = -100dBm
+CSMAMac.node[*].nic.phy.usePropagationDelay = false
+CSMAMac.node[*].nic.phy.thermalNoise = -100dBm
         
-phySim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
-phySim.node[*].nic.phy.decider = xmldoc("config.xml")
+CSMAMac.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+CSMAMac.node[*].nic.phy.decider = xmldoc("config.xml")
 
-phySim.node[*].nic.phy.timeRXToTX = 0.00021s
-phySim.node[*].nic.phy.timeRXToSleep = 0.000031s
+CSMAMac.node[*].nic.phy.timeRXToTX = 0.00021s
+CSMAMac.node[*].nic.phy.timeRXToSleep = 0.000031s
 
-phySim.node[*].nic.phy.timeTXToRX = 0.00012s
-phySim.node[*].nic.phy.timeTXToSleep = 0.000032s
+CSMAMac.node[*].nic.phy.timeTXToRX = 0.00012s
+CSMAMac.node[*].nic.phy.timeTXToSleep = 0.000032s
 
-phySim.node[*].nic.phy.timeSleepToRX = 0.000102s
-phySim.node[*].nic.phy.timeSleepToTX = 0.000203s
+CSMAMac.node[*].nic.phy.timeSleepToRX = 0.000102s
+CSMAMac.node[*].nic.phy.timeSleepToTX = 0.000203s
 
-phySim.node[*].nic.phy.sensitivity = -83dBm
-phySim.node[*].nic.phy.maxTXPower = 100.0mW
+CSMAMac.node[*].nic.phy.sensitivity = -83dBm
+CSMAMac.node[*].nic.phy.maxTXPower = 100.0mW
 
-phySim.node[*].nic.phy.initialRadioState = 0
+CSMAMac.node[*].nic.phy.initialRadioState = 0
 
 ################ MAC layer parameters ####################
-phySim.node[*].nic.mac.queueLength = 5
-phySim.node[*].nic.mac.headerLength = 24bit
-phySim.node[*].nic.mac.slotDuration = 0.002s
-phySim.node[*].nic.mac.difs = 0.0005s
-phySim.node[*].nic.mac.maxTxAttempts = 14
-phySim.node[*].nic.mac.defaultChannel = 0
-phySim.node[*].nic.mac.bitrate = 15360bps
-phySim.node[*].nic.mac.contentionWindow = 20
-phySim.node[*].nic.mac.txPower = 100mW  # [mW]
+CSMAMac.node[*].nic.mac.queueLength = 5
+CSMAMac.node[*].nic.mac.headerLength = 24bit
+CSMAMac.node[*].nic.mac.slotDuration = 0.002s
+CSMAMac.node[*].nic.mac.difs = 0.0005s
+CSMAMac.node[*].nic.mac.maxTxAttempts = 14
+CSMAMac.node[*].nic.mac.defaultChannel = 0
+CSMAMac.node[*].nic.mac.bitrate = 15360bps
+CSMAMac.node[*].nic.mac.contentionWindow = 20
+CSMAMac.node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ NETW layer parameters ####################
-phySim.node[*].net.isSwitch = false
-phySim.node[*].net.maxTtl = 3
-phySim.node[*].net.boredTime = 0.5
+CSMAMac.node[*].net.isSwitch = false
+CSMAMac.node[*].net.maxTtl = 3
+CSMAMac.node[*].net.boredTime = 0.5
 
 ################ Mobility parameters #####################
 
-phySim.node[0].mobility.x = 150
-phySim.node[0].mobility.y = 200
-phySim.node[0].mobility.z = 100
+CSMAMac.node[0].mobility.x = 150
+CSMAMac.node[0].mobility.y = 200
+CSMAMac.node[0].mobility.z = 100
 
-phySim.node[1].mobility.x = 250
-phySim.node[1].mobility.y = 100
-phySim.node[1].mobility.z = 100
+CSMAMac.node[1].mobility.x = 250
+CSMAMac.node[1].mobility.y = 100
+CSMAMac.node[1].mobility.z = 100
 
-phySim.node[2].mobility.x = 250
-phySim.node[2].mobility.y = 200
-phySim.node[2].mobility.z = 100
+CSMAMac.node[2].mobility.x = 250
+CSMAMac.node[2].mobility.y = 200
+CSMAMac.node[2].mobility.z = 100
 
-phySim.node[3].mobility.x = 50
-phySim.node[3].mobility.y = 100
-phySim.node[3].mobility.z = 100
+CSMAMac.node[3].mobility.x = 50
+CSMAMac.node[3].mobility.y = 100
+CSMAMac.node[3].mobility.z = 100
 
-phySim.node[4].mobility.x = 150
-phySim.node[4].mobility.y = 380
-phySim.node[4].mobility.z = 100
+CSMAMac.node[4].mobility.x = 150
+CSMAMac.node[4].mobility.y = 380
+CSMAMac.node[4].mobility.z = 100
 
-phySim.node[5].mobility.x = 50
-phySim.node[5].mobility.y = 400
-phySim.node[5].mobility.z = 100
+CSMAMac.node[5].mobility.x = 50
+CSMAMac.node[5].mobility.y = 400
+CSMAMac.node[5].mobility.z = 100
 
-phySim.node[*].mobility.x = 0
-phySim.node[*].mobility.y = 0
-phySim.node[*].mobility.z = 0
+CSMAMac.node[*].mobility.x = 0
+CSMAMac.node[*].mobility.y = 0
+CSMAMac.node[*].mobility.z = 0
 
-phySim.node[0].net.ip = 0
-phySim.node[0].nic.id = 0
+CSMAMac.node[0].net.ip = 0
+CSMAMac.node[0].nic.id = 0
 
-phySim.node[1].net.ip = 1
-phySim.node[1].nic.id = 1
-phySim.node[2].net.ip = 2
-phySim.node[2].nic.id = 2
-phySim.node[3].net.ip = 3
-phySim.node[3].nic.id = 3
-phySim.node[4].net.ip = 4
-phySim.node[4].nic.id = 4
-phySim.node[5].net.ip = 5
-phySim.node[5].nic.id = 5
-phySim.node[*].net.ip = 0
-phySim.node[*].nic.id = 0
-phySim.node[*].nic.phy.useThermalNoise = true
+CSMAMac.node[1].net.ip = 1
+CSMAMac.node[1].nic.id = 1
+CSMAMac.node[2].net.ip = 2
+CSMAMac.node[2].nic.id = 2
+CSMAMac.node[3].net.ip = 3
+CSMAMac.node[3].nic.id = 3
+CSMAMac.node[4].net.ip = 4
+CSMAMac.node[4].nic.id = 4
+CSMAMac.node[5].net.ip = 5
+CSMAMac.node[5].nic.id = 5
+CSMAMac.node[*].net.ip = 0
+CSMAMac.node[*].nic.id = 0
+CSMAMac.node[*].nic.phy.useThermalNoise = true
 
 
 
 [Config CollisionMac]
 extends = WithPropDelay
 description = "Macs settings lead to too small backoff timer"
-phySim.node[*].nic.mac.slotDuration = 0.0002s
+CSMAMac.node[*].nic.mac.slotDuration = 0.0002s
 
 [Config perftest]
 extends = CollisionMac
 sim-time-limit = 120s
 
 [Config WithPropDelay]
-phySim.node[*].nic.phy.usePropagationDelay = true
-phySim.node[0].net.isSwitch = true
-phySim.node[4].net.isSwitch = true
-phySim.node[*].nic.phy.coreDebug = true
-phySim.numHosts = 6
+CSMAMac.node[*].nic.phy.usePropagationDelay = true
+CSMAMac.node[0].net.isSwitch = true
+CSMAMac.node[4].net.isSwitch = true
+CSMAMac.node[*].nic.phy.coreDebug = true
+CSMAMac.numHosts = 6
 sim-time-limit = 50s
 
 [Config WithoutPropDelay]
-phySim.node[*].nic.phy.usePropagationDelay = false
-phySim.node[0].net.isSwitch = true
-phySim.node[4].net.isSwitch = true
-phySim.node[*].nic.phy.coreDebug = true
-phySim.numHosts = 6
+CSMAMac.node[*].nic.phy.usePropagationDelay = false
+CSMAMac.node[0].net.isSwitch = true
+CSMAMac.node[4].net.isSwitch = true
+CSMAMac.node[*].nic.phy.coreDebug = true
+CSMAMac.numHosts = 6
 sim-time-limit = 50s
