--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = sim
+network = Mac80211
 #random-seed = 13
 ned-path = ../../base;../../modules;../../examples;
 sim-time-limit = 5000s
@@ -22,9 +22,9 @@ cmdenv-module-messages = true
 #       Parameters for the entire simulation                                 #
 ##############################################################################
 
-sim.playgroundSizeX = 500m
-sim.playgroundSizeY = 500m
-sim.numHosts = 10
+Mac80211.playgroundSizeX = 500m
+Mac80211.playgroundSizeY = 500m
+Mac80211.numHosts = 10
 
 # uncomment to enable debug messages for all modules
 # **.debug = 0
@@ -34,21 +34,21 @@ sim.numHosts = 10
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-sim.world.useTorus = false
-sim.world.use2D = true
+Mac80211.world.useTorus = false
+Mac80211.world.use2D = true
 
 ##############################################################################
 #       Parameters for the ConnectionManager                                 #
 ##############################################################################
-sim.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
+Mac80211.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
 
 # max transmission power [mW]
-sim.connectionManager.pMax = 110.11mW  # [mW]
+Mac80211.connectionManager.pMax = 110.11mW  # [mW]
 # signal attenuation threshold [dBm]
-sim.connectionManager.sat = -120dBm  # [dBm]
+Mac80211.connectionManager.sat = -120dBm  # [dBm]
 # path loss coefficient alpha
-sim.connectionManager.alpha = 4
-sim.connectionManager.sendDirect = false
+Mac80211.connectionManager.alpha = 4
+Mac80211.connectionManager.sendDirect = false
 
 
 
@@ -57,46 +57,46 @@ sim.connectionManager.sendDirect = false
 ##############################################################################
 
 # debug switch
-sim.host[*].mobility.debug = false
+Mac80211.host[*].mobility.debug = false
 
 # if set to 0 the MN does not move
-sim.host[*].mobility.speed = 0mps
-sim.host[*].mobility.updateInterval = 0.5s
+Mac80211.host[*].mobility.speed = 0mps
+Mac80211.host[*].mobility.updateInterval = 0.5s
 
 # starting position for the hosts "-1" means random staring point
 # starting position for the hosts "-1" means random staring point
-sim.host[0].mobility.x = 30
-sim.host[0].mobility.y = 75
+Mac80211.host[0].mobility.x = 30
+Mac80211.host[0].mobility.y = 75
 
-sim.host[1].mobility.x = 290
-sim.host[1].mobility.y = 160
+Mac80211.host[1].mobility.x = 290
+Mac80211.host[1].mobility.y = 160
 
-sim.host[2].mobility.x = 420
-sim.host[2].mobility.y = 120
+Mac80211.host[2].mobility.x = 420
+Mac80211.host[2].mobility.y = 120
 
-sim.host[3].mobility.x = 380
-sim.host[3].mobility.y = 30
+Mac80211.host[3].mobility.x = 380
+Mac80211.host[3].mobility.y = 30
 
-sim.host[4].mobility.x = 220
-sim.host[4].mobility.y = 60
+Mac80211.host[4].mobility.x = 220
+Mac80211.host[4].mobility.y = 60
 
-sim.host[5].mobility.x = 450
-sim.host[5].mobility.y = 320
+Mac80211.host[5].mobility.x = 450
+Mac80211.host[5].mobility.y = 320
 
-sim.host[6].mobility.x = 150
-sim.host[6].mobility.y = 155
+Mac80211.host[6].mobility.x = 150
+Mac80211.host[6].mobility.y = 155
 
-sim.host[7].mobility.x = 330
-sim.host[7].mobility.y = 280
+Mac80211.host[7].mobility.x = 330
+Mac80211.host[7].mobility.y = 280
 
-sim.host[8].mobility.x = 70
-sim.host[8].mobility.y = 257
+Mac80211.host[8].mobility.x = 70
+Mac80211.host[8].mobility.y = 257
 
-sim.host[9].mobility.x = 150
-sim.host[9].mobility.y = 300
+Mac80211.host[9].mobility.x = 150
+Mac80211.host[9].mobility.y = 300
 
-sim.host[*].mobility.x = -1
-sim.host[*].mobility.y = -1
+Mac80211.host[*].mobility.x = -1
+Mac80211.host[*].mobility.y = -1
 
 ##############################################################################
 #       Parameters for the Host                                              #
@@ -107,15 +107,15 @@ sim.host[*].mobility.y = -1
 ##############################################################################
 
 # debug switch
-sim.host[*].appl.debug = false
-sim.host[*].appl.headerLength = 1024bit
-sim.host[*].appl.burstSize = 3
+Mac80211.host[*].appl.debug = false
+Mac80211.host[*].appl.headerLength = 1024bit
+Mac80211.host[*].appl.burstSize = 3
 
 ##############################################################################
 #       Parameters for the Network Layer                                     #
 ##############################################################################
-sim.host[*].net.headerLength = 32bit# in bits
-sim.host[*].net.debug = false
+Mac80211.host[*].net.headerLength = 32bit# in bits
+Mac80211.host[*].net.debug = false
 
 ##############################################################################
 #       Parameters for ARP
@@ -126,20 +126,20 @@ sim.host[*].net.debug = false
 ##############################################################################
 
 # debug switch
-sim.host[*].nic.mac.headerLength = 272 bit
-sim.host[*].nic.mac.queueLength = 14
-sim.host[*].nic.mac.bitrate = 2E+6bps# in bits/second
-sim.host[*].nic.mac.defaultChannel = 0
-sim.host[*].nic.mac.autoBitrate = false
+Mac80211.host[*].nic.mac.headerLength = 272 bit
+Mac80211.host[*].nic.mac.queueLength = 14
+Mac80211.host[*].nic.mac.bitrate = 2E+6bps# in bits/second
+Mac80211.host[*].nic.mac.defaultChannel = 0
+Mac80211.host[*].nic.mac.autoBitrate = false
 
 ### values if no fading is modelled, gives at most 1% packet error rate
-sim.host[*].nic.mac.snr2Mbit = 1.46dB  # [dB]
-sim.host[*].nic.mac.snr5Mbit = 2.6dB  # [dB]
-sim.host[*].nic.mac.snr11Mbit = 5.68dB  # [dB]
+Mac80211.host[*].nic.mac.snr2Mbit = 1.46dB  # [dB]
+Mac80211.host[*].nic.mac.snr5Mbit = 2.6dB  # [dB]
+Mac80211.host[*].nic.mac.snr11Mbit = 5.68dB  # [dB]
 
-sim.host[*].nic.mac.rtsCtsThreshold = 400
-sim.host[*].nic.mac.neighborhoodCacheSize = 30
-sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
+Mac80211.host[*].nic.mac.rtsCtsThreshold = 400
+Mac80211.host[*].nic.mac.neighborhoodCacheSize = 30
+Mac80211.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
 
 ##############################################################################
 #       Parameters for the Phy                                               #
@@ -165,4 +165,4 @@ sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
 **.phy.initialRadioState = 0
 **.mobility.z = 0
 **.phy.headerLength = 192bit
-sim.host[*].nic.phy.useThermalNoise = true
+Mac80211.host[*].nic.phy.useThermalNoise = true
