--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -3,73 +3,73 @@ cmdenv-config-name = perftest
 cmdenv-express-mode = true
 cmdenv-status-frequency = 0.5s
 ned-path = ../../base;../../modules;../../examples;
-network = phySim
+network = AnalogueModels
 
 
 
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
-phySim.**.coreDebug = false
-phySim.playgroundSizeX = 300m
-phySim.playgroundSizeY = 300m
-phySim.playgroundSizeZ = 300m
-phySim.numHosts = 2
+AnalogueModels.**.coreDebug = false
+AnalogueModels.playgroundSizeX = 300m
+AnalogueModels.playgroundSizeY = 300m
+AnalogueModels.playgroundSizeZ = 300m
+AnalogueModels.numHosts = 2
 
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-phySim.world.useTorus = false
-phySim.world.use2D = false
+AnalogueModels.world.useTorus = false
+AnalogueModels.world.use2D = false
 
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-phySim.connectionManager.coreDebug = false
-phySim.connectionManager.sendDirect = false
-phySim.connectionManager.pMax = 100mW
-phySim.connectionManager.sat = -90dBm
-phySim.connectionManager.alpha = 2.0
-phySim.connectionManager.carrierFrequency = 2.4e+9Hz
+AnalogueModels.connectionManager.coreDebug = false
+AnalogueModels.connectionManager.sendDirect = false
+AnalogueModels.connectionManager.pMax = 100mW
+AnalogueModels.connectionManager.sat = -90dBm
+AnalogueModels.connectionManager.alpha = 2.0
+AnalogueModels.connectionManager.carrierFrequency = 2.4e+9Hz
 
 ##########################################################
 #             Host specific parameters                   #
 ##########################################################
-phySim.*Node*.utility.coreDebug = false
+AnalogueModels.*Node*.utility.coreDebug = false
 
 ################ PhyLayer parameters #####################
-phySim.node[*].nic.phy.usePropagationDelay = false
-phySim.node[*].nic.phy.thermalNoise = 1.0
+AnalogueModels.node[*].nic.phy.usePropagationDelay = false
+AnalogueModels.node[*].nic.phy.thermalNoise = 1.0
         
-phySim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
-phySim.node[*].nic.phy.decider = xmldoc("config.xml")
+AnalogueModels.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+AnalogueModels.node[*].nic.phy.decider = xmldoc("config.xml")
 
-phySim.node[*].nic.phy.timeRXToTX = 0.00021
-phySim.node[*].nic.phy.timeRXToSleep = 0.000031
+AnalogueModels.node[*].nic.phy.timeRXToTX = 0.00021
+AnalogueModels.node[*].nic.phy.timeRXToSleep = 0.000031
 
-phySim.node[*].nic.phy.timeTXToRX = 0.00012
-phySim.node[*].nic.phy.timeTXToSleep = 0.000032
+AnalogueModels.node[*].nic.phy.timeTXToRX = 0.00012
+AnalogueModels.node[*].nic.phy.timeTXToSleep = 0.000032
 
-phySim.node[*].nic.phy.timeSleepToRX = 0.000102
-phySim.node[*].nic.phy.timeSleepToTX = 0.000203
-phySim.node[*].nic.phy.initialRadioState = 2
+AnalogueModels.node[*].nic.phy.timeSleepToRX = 0.000102
+AnalogueModels.node[*].nic.phy.timeSleepToTX = 0.000203
+AnalogueModels.node[*].nic.phy.initialRadioState = 2
 ##########################################################
 #                   hosts parameters                     #
 ##########################################################
-phySim.node[*].nic.connectionManagerName = "connectionManager"
+AnalogueModels.node[*].nic.connectionManagerName = "connectionManager"
 
 ################ PhyLayer parameters #####################
-phySim.node[*].nic.phy.sensitivity = -90
-phySim.node[*].nic.phy.maxTXPower = 100.0
+AnalogueModels.node[*].nic.phy.sensitivity = -90
+AnalogueModels.node[*].nic.phy.maxTXPower = 100.0
 
 ################ Mobility parameters #####################
-phySim.node[0].mobility.x = 100
-phySim.node[0].mobility.y = 150
-phySim.node[0].mobility.z = 100
+AnalogueModels.node[0].mobility.x = 100
+AnalogueModels.node[0].mobility.y = 150
+AnalogueModels.node[0].mobility.z = 100
 
-phySim.node[1].mobility.x = 200
-phySim.node[1].mobility.y = 100
-phySim.node[1].mobility.z = 100
+AnalogueModels.node[1].mobility.x = 200
+AnalogueModels.node[1].mobility.y = 100
+AnalogueModels.node[1].mobility.z = 100
 
 
 [Config perftest]
@@ -77,5 +77,5 @@ extends = WithPropDelay
 sim-time-limit = 2.0s
 
 [Config WithPropDelay]
-phySim.numHosts = 2
-phySim.node[*].nic.phy.usePropagationDelay = true
+AnalogueModels.numHosts = 2
+AnalogueModels.node[*].nic.phy.usePropagationDelay = true
