--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -5,7 +5,7 @@ cmdenv-module-messages = true
 
 cmdenv-runs-to-execute = 
 ned-path = ../../base;../../modules;../../examples;
-network = csmaTestSim
+network = ieee802154Narrow
 
 sim-time-limit = 100s
 
@@ -14,76 +14,70 @@ sim-time-limit = 100s
 #			Simulation parameters                        #
 ##########################################################
 tkenv-default-config = 
-csmaTestSim.**.coreDebug = false
-csmaTestSim.playgroundSizeX = 100m
-csmaTestSim.playgroundSizeY = 100m
-csmaTestSim.playgroundSizeZ = 300m
-csmaTestSim.numHosts = 3
+ieee802154Narrow.**.coreDebug = false
+ieee802154Narrow.playgroundSizeX = 100m
+ieee802154Narrow.playgroundSizeY = 100m
+ieee802154Narrow.playgroundSizeZ = 300m
+ieee802154Narrow.numHosts = 3
 
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-csmaTestSim.world.useTorus = false
-csmaTestSim.world.use2D = true
+ieee802154Narrow.world.useTorus = false
+ieee802154Narrow.world.use2D = true
 
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-csmaTestSim.connectionManager.sendDirect = false
-csmaTestSim.connectionManager.pMax = 1.1mW
-csmaTestSim.connectionManager.sat = -100dBm
-csmaTestSim.connectionManager.alpha = 2.5
-csmaTestSim.connectionManager.carrierFrequency = 2.4E+9Hz
+ieee802154Narrow.connectionManager.sendDirect = false
+ieee802154Narrow.connectionManager.pMax = 1.1mW
+ieee802154Narrow.connectionManager.sat = -100dBm
+ieee802154Narrow.connectionManager.alpha = 2.5
+ieee802154Narrow.connectionManager.carrierFrequency = 2.4E+9Hz
 
 ################ PhyLayer parameters #####################
-csmaTestSim.node[*].nic.phy.usePropagationDelay = false
+ieee802154Narrow.node[*].nic.phy.usePropagationDelay = false
  
-csmaTestSim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
-#csmaTestSim.node[*].nic.phy.decider = xmldoc("config.xml")
-csmaTestSim.node[*].nic.phy.sensitivity = -100dBm
-csmaTestSim.node[*].nic.phy.maxTXPower = 1.1mW
-csmaTestSim.node[*].nic.phy.initialRadioState = 0
-csmaTestSim.node[*].nic.phy.useThermalNoise = true
+ieee802154Narrow.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+#ieee802154Narrow.node[*].nic.phy.decider = xmldoc("config.xml")
+ieee802154Narrow.node[*].nic.phy.sensitivity = -100dBm
+ieee802154Narrow.node[*].nic.phy.maxTXPower = 1.1mW
+ieee802154Narrow.node[*].nic.phy.initialRadioState = 0
+ieee802154Narrow.node[*].nic.phy.useThermalNoise = true
 
 
 ################ MAC layer parameters ####################
-csmaTestSim.node[*].nic.mac.txPower = 1mW  # [mW]
-csmaTestSim.node[*].nic.mac.notAffectedByHostState = true
-csmaTestSim.node[*].nic.mac.macMinBE = 1
-csmaTestSim.node[*].nic.mac.macMaxBE = 6
-csmaTestSim.node[*].nic.mac.macMaxCSMABackoffs = 20
-csmaTestSim.node[*].nic.mac.macAckWaitDuration = 0.000864s
-csmaTestSim.node[*].nic.mac.aUnitBackoffPeriod = 0.02s
+ieee802154Narrow.node[*].nic.mac.txPower = 1mW  # [mW]
+ieee802154Narrow.node[*].nic.mac.notAffectedByHostState = true
+ieee802154Narrow.node[*].nic.mac.macMinBE = 1
+ieee802154Narrow.node[*].nic.mac.macMaxBE = 6
+ieee802154Narrow.node[*].nic.mac.macMaxCSMABackoffs = 20
+ieee802154Narrow.node[*].nic.mac.macAckWaitDuration = 0.000864s
+ieee802154Narrow.node[*].nic.mac.aUnitBackoffPeriod = 0.02s
 
 ################ NETW layer parameters ####################
 
 
 ################ Mobility parameters #####################
 
-csmaTestSim.node[0].mobility.x = 200	
-csmaTestSim.node[0].mobility.y = 300
-csmaTestSim.node[0].mobility.z = 100
+ieee802154Narrow.node[0].mobility.x = 200	
+ieee802154Narrow.node[0].mobility.y = 300
+ieee802154Narrow.node[0].mobility.z = 100
 
-csmaTestSim.node[1].mobility.x = 300	
-csmaTestSim.node[1].mobility.y = 300
-csmaTestSim.node[1].mobility.z = 100
+ieee802154Narrow.node[1].mobility.x = 300	
+ieee802154Narrow.node[1].mobility.y = 300
+ieee802154Narrow.node[1].mobility.z = 100
 
-csmaTestSim.node[2].mobility.x = 400	
-csmaTestSim.node[2].mobility.y = 300
-csmaTestSim.node[2].mobility.z = 100
+ieee802154Narrow.node[2].mobility.x = 400	
+ieee802154Narrow.node[2].mobility.y = 300
+ieee802154Narrow.node[2].mobility.z = 100
 
-csmaTestSim.node[*].mobility.debug = false
-csmaTestSim.node[*].mobility.speed = 0
-csmaTestSim.node[*].mobility.updateInterval = 0.5s
-csmaTestSim.node[*].mobility.angle = 0
-csmaTestSim.node[*].mobility.acceleration = 0
-
-csmaTestSim.node[*].appl.debug = false
-csmaTestSim.node[*].appl.packetLength = 24880bit
+ieee802154Narrow.node[*].appl.debug = false
+ieee802154Narrow.node[*].appl.packetLength = 24880bit
 **.appl.packetTime = 0.1s
 **.appl.packetsPerPacketTime = 0.15
 
-csmaTestSim.world.bitrate = 250000
+ieee802154Narrow.world.bitrate = 250000
 
 **.battery.debug = false
 **.battery.nominal = 99999mAh
@@ -113,22 +107,22 @@ csmaTestSim.world.bitrate = 250000
 ##################################################
 [Config Test1-A]
 description = "increasing number of hosts, unbursted, with queue"
-csmaTestSim.playgroundSizeX = 10m
-csmaTestSim.playgroundSizeY = 10m
-csmaTestSim.numHosts = ${2..20 step 1}
-csmaTestSim.node[*].mobility.x = -1
-csmaTestSim.node[*].mobility.y = -1
-csmaTestSim.node[*].mobility.z = -1
+ieee802154Narrow.playgroundSizeX = 10m
+ieee802154Narrow.playgroundSizeY = 10m
+ieee802154Narrow.numHosts = ${2..20 step 1}
+ieee802154Narrow.node[*].mobility.x = -1
+ieee802154Narrow.node[*].mobility.y = -1
+ieee802154Narrow.node[*].mobility.z = -1
 **.appl.packetsPerPacketTime = 0.1
 
 [Config Test1-B]
 description = "increasing send rate per host, unbursted, with queue"
-csmaTestSim.playgroundSizeX = 10m
-csmaTestSim.playgroundSizeY = 10m
-csmaTestSim.numHosts = 10
-csmaTestSim.node[*].mobility.x = -1
-csmaTestSim.node[*].mobility.y = -1
-csmaTestSim.node[*].mobility.z = -1
+ieee802154Narrow.playgroundSizeX = 10m
+ieee802154Narrow.playgroundSizeY = 10m
+ieee802154Narrow.numHosts = 10
+ieee802154Narrow.node[*].mobility.x = -1
+ieee802154Narrow.node[*].mobility.y = -1
+ieee802154Narrow.node[*].mobility.z = -1
 **.appl.packetsPerPacketTime = ${0.02..0.2 step 0.01}
 **.appl.burstSize = 1
 **.mac.queueLength = 100
@@ -163,40 +157,40 @@ description = "increasing send rate per host, unbursted, without queue"
 [Config Test2-A]
 description = "one sending host moving towards sink, with mac-acks"
 sim-time-limit = 300s
-csmaTestSim.playgroundSizeX = 500m
-csmaTestSim.playgroundSizeY = 500m
-csmaTestSim.numHosts = 2
-csmaTestSim.node[0].mobility.x = 250
-csmaTestSim.node[0].mobility.y = 250
-csmaTestSim.node[1].mobility.x = 250 - ${dist=40..220 step 5}#${dist=40..160 step 40, 180..220 step 2, 230,240}
-csmaTestSim.node[1].mobility.y = 250
+ieee802154Narrow.playgroundSizeX = 500m
+ieee802154Narrow.playgroundSizeY = 500m
+ieee802154Narrow.numHosts = 2
+ieee802154Narrow.node[0].mobility.x = 250
+ieee802154Narrow.node[0].mobility.y = 250
+ieee802154Narrow.node[1].mobility.x = 250 - ${dist=40..220 step 5}#${dist=40..160 step 40, 180..220 step 2, 230,240}
+ieee802154Narrow.node[1].mobility.y = 250
 
-csmaTestSim.node[0].appl.burstSize = 0
-csmaTestSim.node[1].appl.burstSize = 1
-csmaTestSim.node[1].appl.destination = 12
+ieee802154Narrow.node[0].appl.burstSize = 0
+ieee802154Narrow.node[1].appl.burstSize = 1
+ieee802154Narrow.node[1].appl.destination = 12
 **.appl.packetsPerPacketTime = 0.25
 
-csmaTestSim.world.bcTraffic = false
+ieee802154Narrow.world.bcTraffic = false
 
 [Config Test2-B]
 extends = Test2-A
 description = "one sending host moving towards sink, without mac-acks"
-csmaTestSim.node[1].appl.destination = 12
-csmaTestSim.node*.nic.mac.useMACAcks = false
-csmaTestSim.world.bcTraffic = false
+ieee802154Narrow.node[1].appl.destination = 12
+ieee802154Narrow.node*.nic.mac.useMACAcks = false
+ieee802154Narrow.world.bcTraffic = false
 
 [Config Test2-C]
 extends = Test2-A
 description = "one sending host stationary in range of sink (hidden station), \
 			   one host moving towards sink and stationary sender,\
 			   with mac ACKS"
-csmaTestSim.numHosts = 3
+ieee802154Narrow.numHosts = 3
 **.appl.packetsPerPacketTime = 0.125
-csmaTestSim.node[2].mobility.x = 380
-csmaTestSim.node[2].mobility.y = 250
-csmaTestSim.node[2].appl.burstSize = 1
-csmaTestSim.node[2].appl.destination = 13
-csmaTestSim.node[1].appl.destination = 13
+ieee802154Narrow.node[2].mobility.x = 380
+ieee802154Narrow.node[2].mobility.y = 250
+ieee802154Narrow.node[2].appl.burstSize = 1
+ieee802154Narrow.node[2].appl.destination = 13
+ieee802154Narrow.node[1].appl.destination = 13
 
 ######################################################
 # Test 3
@@ -210,16 +204,16 @@ csmaTestSim.node[1].appl.destination = 13
 [Config Test3]
 description = "quadratic increasing number of hosts results in linear increase of backoffs"
 sim-time-limit = ${numHosts}s
-csmaTestSim.playgroundSizeX = 10m
-csmaTestSim.playgroundSizeY = 10m
-csmaTestSim.numHosts = ${numHosts=2,4,8,16,32,64,128,256}
-csmaTestSim.node[*].mobility.x = -1
-csmaTestSim.node[*].mobility.y = -1
-csmaTestSim.node[*].mobility.z = -1
+ieee802154Narrow.playgroundSizeX = 10m
+ieee802154Narrow.playgroundSizeY = 10m
+ieee802154Narrow.numHosts = ${numHosts=2,4,8,16,32,64,128,256}
+ieee802154Narrow.node[*].mobility.x = -1
+ieee802154Narrow.node[*].mobility.y = -1
+ieee802154Narrow.node[*].mobility.z = -1
 **.appl.packetsPerPacketTime = 1/${numHosts}
-csmaTestSim.node[*].nic.mac.macMinBE = 1
-csmaTestSim.node[*].nic.mac.macMaxBE = 8
-csmaTestSim.node[*].nic.mac.macMaxCSMABackoffs = 20
-csmaTestSim.node[*].nic.mac.aUnitBackoffPeriod = 0.1s
-csmaTestSim.connectionManager.sendDirect = true
+ieee802154Narrow.node[*].nic.mac.macMinBE = 1
+ieee802154Narrow.node[*].nic.mac.macMaxBE = 8
+ieee802154Narrow.node[*].nic.mac.macMaxCSMABackoffs = 20
+ieee802154Narrow.node[*].nic.mac.aUnitBackoffPeriod = 0.1s
+ieee802154Narrow.connectionManager.sendDirect = true
 **.appl.burstSize = 2
