--- a/examples/multiConnectionManager/omnetpp.ini
+++ b/examples/multiConnectionManager/omnetpp.ini
@@ -1,41 +1,41 @@
 [General]
 ned-path = ../../base/;../../modules;../../examples
-network = phySim
+network = MultiConnectionManager
 
 
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
-phySim.**.coreDebug = true
-phySim.playgroundSizeX = 500m
-phySim.playgroundSizeY = 500m
-phySim.playgroundSizeZ = 500m
-phySim.numGSMHosts = 2
-phySim.numISMHosts = 2
+MultiConnectionManager.**.coreDebug = true
+MultiConnectionManager.playgroundSizeX = 500m
+MultiConnectionManager.playgroundSizeY = 500m
+MultiConnectionManager.playgroundSizeZ = 500m
+MultiConnectionManager.numGSMHosts = 2
+MultiConnectionManager.numISMHosts = 2
 
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-phySim.world.useTorus = false
-phySim.world.use2D = false
+MultiConnectionManager.world.useTorus = false
+MultiConnectionManager.world.use2D = false
 
 ##########################################################
 #			    GSM channel parameters                  #
 ##########################################################
-phySim.GSMChannel.sendDirect = false
-phySim.GSMChannel.pMax = 20mW
-phySim.GSMChannel.sat = -90dBm
-phySim.GSMChannel.alpha = 3.5
-phySim.GSMChannel.carrierFrequency = 868e+6Hz
+MultiConnectionManager.GSMChannel.sendDirect = false
+MultiConnectionManager.GSMChannel.pMax = 20mW
+MultiConnectionManager.GSMChannel.sat = -90dBm
+MultiConnectionManager.GSMChannel.alpha = 3.5
+MultiConnectionManager.GSMChannel.carrierFrequency = 868e+6Hz
 
 ##########################################################
 #		       ISM channel parameters                 #
 ##########################################################
-phySim.ISMChannel.sendDirect = false
-phySim.ISMChannel.pMax = 100mW
-phySim.ISMChannel.sat = -90dBm
-phySim.ISMChannel.alpha = 3.0
-phySim.ISMChannel.carrierFrequency = 868e+6Hz
+MultiConnectionManager.ISMChannel.sendDirect = false
+MultiConnectionManager.ISMChannel.pMax = 100mW
+MultiConnectionManager.ISMChannel.sat = -90dBm
+MultiConnectionManager.ISMChannel.alpha = 3.0
+MultiConnectionManager.ISMChannel.carrierFrequency = 868e+6Hz
 
 ##########################################################
 #             Host specific parameters                   #
@@ -44,104 +44,104 @@ phySim.ISMChannel.carrierFrequency = 868e+6Hz
 ################# Application Layer  #####################
 
 # debug switch
-phySim.*Node*.appl.debug = false
-phySim.*Node*.appl.headerLength = 1024bit
-phySim.*Node*.appl.burstSize = 3
+MultiConnectionManager.*Node*.appl.debug = false
+MultiConnectionManager.*Node*.appl.headerLength = 1024bit
+MultiConnectionManager.*Node*.appl.burstSize = 3
 
 ################### Network Layer ########################
-phySim.*Node*.net.headerLength = 32bit# in bits
-phySim.*Node*.net.debug = false
-phySim.*Node*.net.stats = false
+MultiConnectionManager.*Node*.net.headerLength = 32bit# in bits
+MultiConnectionManager.*Node*.net.debug = false
+MultiConnectionManager.*Node*.net.stats = false
 
 ################ MAC layer parameters ####################
-phySim.*Node[*].nic.mac.queueLength = 5
-phySim.*Node[*].nic.mac.headerLength = 24bit
-phySim.*Node[*].nic.mac.slotDuration = 0.08s
-phySim.*Node[*].nic.mac.difs = 0.0005s
-phySim.*Node[*].nic.mac.maxTxAttempts = 14
-phySim.*Node[*].nic.mac.defaultChannel = 0
-phySim.*Node[*].nic.mac.bitrate = 15360bps
-phySim.*Node[*].nic.mac.contentionWindow = 20
-phySim.*Node[*].nic.mac.txPower = 100mW  # [mW]
+MultiConnectionManager.*Node[*].nic.mac.queueLength = 5
+MultiConnectionManager.*Node[*].nic.mac.headerLength = 24bit
+MultiConnectionManager.*Node[*].nic.mac.slotDuration = 0.08s
+MultiConnectionManager.*Node[*].nic.mac.difs = 0.0005s
+MultiConnectionManager.*Node[*].nic.mac.maxTxAttempts = 14
+MultiConnectionManager.*Node[*].nic.mac.defaultChannel = 0
+MultiConnectionManager.*Node[*].nic.mac.bitrate = 15360bps
+MultiConnectionManager.*Node[*].nic.mac.contentionWindow = 20
+MultiConnectionManager.*Node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ PhyLayer parameters #####################
-phySim.*Node*.nic.phy.usePropagationDelay = false
-phySim.*Node*.nic.phy.thermalNoise = -110dBm
-phySim.*Node*.nic.phy.useThermalNoise = true
+MultiConnectionManager.*Node*.nic.phy.usePropagationDelay = false
+MultiConnectionManager.*Node*.nic.phy.thermalNoise = -110dBm
+MultiConnectionManager.*Node*.nic.phy.useThermalNoise = true
         
-phySim.*Node*.nic.phy.decider = xmldoc("decider.xml")
+MultiConnectionManager.*Node*.nic.phy.decider = xmldoc("decider.xml")
 
-phySim.*Node*.nic.phy.timeRXToTX = 0.0s
-phySim.*Node*.nic.phy.timeRXToSleep = 0.0s
+MultiConnectionManager.*Node*.nic.phy.timeRXToTX = 0.0s
+MultiConnectionManager.*Node*.nic.phy.timeRXToSleep = 0.0s
 
-phySim.*Node*.nic.phy.timeTXToRX = 0.0s
-phySim.*Node*.nic.phy.timeTXToSleep = 0.0s
+MultiConnectionManager.*Node*.nic.phy.timeTXToRX = 0.0s
+MultiConnectionManager.*Node*.nic.phy.timeTXToSleep = 0.0s
 
-phySim.*Node*.nic.phy.timeSleepToRX = 0.0s
-phySim.*Node*.nic.phy.timeSleepToTX = 0.0s
-phySim.*Node*.nic.phy.initialRadioState = 2
+MultiConnectionManager.*Node*.nic.phy.timeSleepToRX = 0.0s
+MultiConnectionManager.*Node*.nic.phy.timeSleepToTX = 0.0s
+MultiConnectionManager.*Node*.nic.phy.initialRadioState = 2
 
 ##########################################################
 #              GSM hosts parameters                     #
 ##########################################################
-phySim.GSMNode[*].nic.connectionManagerName = "GSMChannel"
+MultiConnectionManager.GSMNode[*].nic.connectionManagerName = "GSMChannel"
 
 ################ PhyLayer parameters #####################
-phySim.GSMNode[*].nic.phy.sensitivity = -100.5dBm
-phySim.GSMNode[*].nic.phy.maxTXPower = 20.0mW
-phySim.GSMNode[*].nic.phy.analogueModels = xmldoc("GSMmodels.xml")
+MultiConnectionManager.GSMNode[*].nic.phy.sensitivity = -100.5dBm
+MultiConnectionManager.GSMNode[*].nic.phy.maxTXPower = 20.0mW
+MultiConnectionManager.GSMNode[*].nic.phy.analogueModels = xmldoc("GSMmodels.xml")
 
 ################ Mobility parameters #####################
-phySim.GSMNode[0].mobility.x = 230
-phySim.GSMNode[0].mobility.y = 220
-phySim.GSMNode[0].mobility.z = 100
+MultiConnectionManager.GSMNode[0].mobility.x = 230
+MultiConnectionManager.GSMNode[0].mobility.y = 220
+MultiConnectionManager.GSMNode[0].mobility.z = 100
 
-phySim.GSMNode[2].mobility.x = 400
-phySim.GSMNode[2].mobility.y = 390
-phySim.GSMNode[2].mobility.z = 100
+MultiConnectionManager.GSMNode[2].mobility.x = 400
+MultiConnectionManager.GSMNode[2].mobility.y = 390
+MultiConnectionManager.GSMNode[2].mobility.z = 100
 
-phySim.GSMNode[1].mobility.x = 250
-phySim.GSMNode[1].mobility.y = 120
-phySim.GSMNode[1].mobility.z = 100
+MultiConnectionManager.GSMNode[1].mobility.x = 250
+MultiConnectionManager.GSMNode[1].mobility.y = 120
+MultiConnectionManager.GSMNode[1].mobility.z = 100
 
 ##########################################################
 #              ISM hosts parameters                   #
 ##########################################################
-phySim.ISMNode[*].nic.connectionManagerName = "ISMChannel"
+MultiConnectionManager.ISMNode[*].nic.connectionManagerName = "ISMChannel"
 
 ################ PhyLayer parameters #####################
-phySim.ISMNode[*].nic.phy.sensitivity = -119.5dBm
-phySim.ISMNode[*].nic.phy.maxTXPower = 100.0mW
-phySim.ISMNode[*].nic.phy.analogueModels = xmldoc("ISMmodels.xml")
+MultiConnectionManager.ISMNode[*].nic.phy.sensitivity = -119.5dBm
+MultiConnectionManager.ISMNode[*].nic.phy.maxTXPower = 100.0mW
+MultiConnectionManager.ISMNode[*].nic.phy.analogueModels = xmldoc("ISMmodels.xml")
 
 ################ Mobility parameters #####################
-phySim.ISMNode[0].mobility.x = 150
-phySim.ISMNode[0].mobility.y = 90
-phySim.ISMNode[0].mobility.z = 100
+MultiConnectionManager.ISMNode[0].mobility.x = 150
+MultiConnectionManager.ISMNode[0].mobility.y = 90
+MultiConnectionManager.ISMNode[0].mobility.z = 100
 
-phySim.ISMNode[1].mobility.x = 200
-phySim.ISMNode[1].mobility.y = 300
-phySim.ISMNode[1].mobility.z = 100
+MultiConnectionManager.ISMNode[1].mobility.x = 200
+MultiConnectionManager.ISMNode[1].mobility.y = 300
+MultiConnectionManager.ISMNode[1].mobility.z = 100
 
-phySim.ISMNode[2].mobility.x = 400
-phySim.ISMNode[2].mobility.y = 400
-phySim.ISMNode[2].mobility.z = 450
+MultiConnectionManager.ISMNode[2].mobility.x = 400
+MultiConnectionManager.ISMNode[2].mobility.y = 400
+MultiConnectionManager.ISMNode[2].mobility.z = 450
 
 
 [Config config1]
 description = "Same CM - no delay"
-phySim.numGSMHosts = 0
-phySim.numISMHosts = 3
+MultiConnectionManager.numGSMHosts = 0
+MultiConnectionManager.numISMHosts = 3
 
 [Config config2]
 description = "Same CM - with delay"
-phySim.numGSMHosts = 0
-phySim.numISMHosts = 3
-phySim.*Node*.nic.phy.usePropagationDelay = true
+MultiConnectionManager.numGSMHosts = 0
+MultiConnectionManager.numISMHosts = 3
+MultiConnectionManager.*Node*.nic.phy.usePropagationDelay = true
 
 [Config config3]
 description = "Different CM - no delay"
 
 [Config config4]
 description = "Different CM - with delay"
-phySim.*Node*.nic.phy.usePropagationDelay = true
+MultiConnectionManager.*Node*.nic.phy.usePropagationDelay = true
