--- a/examples/baseNetwork/omnetpp.ini
+++ b/examples/baseNetwork/omnetpp.ini
@@ -2,109 +2,109 @@
 cmdenv-config-name = perftest
 cmdenv-express-mode = true
 ned-path = ../../base;../../modules;../../examples;
-network = baseSim
+network = BaseNetwork
 
 
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
 tkenv-default-config = 
-baseSim.**.coreDebug = false
-baseSim.playgroundSizeX = 300m
-baseSim.playgroundSizeY = 300m
-baseSim.playgroundSizeZ = 300m
-baseSim.numNodes = 5
+BaseNetwork.**.coreDebug = false
+BaseNetwork.playgroundSizeX = 300m
+BaseNetwork.playgroundSizeY = 300m
+BaseNetwork.playgroundSizeZ = 300m
+BaseNetwork.numNodes = 5
 
 ##########################################################
 #			WorldUtility parameters                      #
 ##########################################################
-baseSim.world.useTorus = false
-baseSim.world.use2D = false
+BaseNetwork.world.useTorus = false
+BaseNetwork.world.use2D = false
 
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-baseSim.connectionManager.sendDirect = false
-baseSim.connectionManager.pMax = 100mW
-baseSim.connectionManager.sat = -71dBm
-baseSim.connectionManager.alpha = 3.0
-baseSim.connectionManager.carrierFrequency = 2.412e+9Hz
+BaseNetwork.connectionManager.sendDirect = false
+BaseNetwork.connectionManager.pMax = 100mW
+BaseNetwork.connectionManager.sat = -71dBm
+BaseNetwork.connectionManager.alpha = 3.0
+BaseNetwork.connectionManager.carrierFrequency = 2.412e+9Hz
 
 
 ################ PhyLayer parameters #####################
-baseSim.node[*].nic.phy.usePropagationDelay = false
-baseSim.node[*].nic.phy.thermalNoise = -100dBm
+BaseNetwork.node[*].nic.phy.usePropagationDelay = false
+BaseNetwork.node[*].nic.phy.thermalNoise = -100dBm
         
-baseSim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
-baseSim.node[*].nic.phy.decider = xmldoc("config.xml")
+BaseNetwork.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+BaseNetwork.node[*].nic.phy.decider = xmldoc("config.xml")
 
-baseSim.node[*].nic.phy.timeRXToTX = 0.00021s
-baseSim.node[*].nic.phy.timeRXToSleep = 0.000031s
+BaseNetwork.node[*].nic.phy.timeRXToTX = 0.00021s
+BaseNetwork.node[*].nic.phy.timeRXToSleep = 0.000031s
 
-baseSim.node[*].nic.phy.timeTXToRX = 0.00012s
-baseSim.node[*].nic.phy.timeTXToSleep = 0.000032s
+BaseNetwork.node[*].nic.phy.timeTXToRX = 0.00012s
+BaseNetwork.node[*].nic.phy.timeTXToSleep = 0.000032s
 
-baseSim.node[*].nic.phy.timeSleepToRX = 0.000102s
-baseSim.node[*].nic.phy.timeSleepToTX = 0.000203s
+BaseNetwork.node[*].nic.phy.timeSleepToRX = 0.000102s
+BaseNetwork.node[*].nic.phy.timeSleepToTX = 0.000203s
 
-baseSim.node[*].nic.phy.sensitivity = -89dBm
-baseSim.node[*].nic.phy.maxTXPower = 100.0mW
+BaseNetwork.node[*].nic.phy.sensitivity = -89dBm
+BaseNetwork.node[*].nic.phy.maxTXPower = 100.0mW
 
-baseSim.node[*].nic.phy.initialRadioState = 0
+BaseNetwork.node[*].nic.phy.initialRadioState = 0
 
 ################ MAC layer parameters ####################
-baseSim.node[*].nic.mac.queueLength = 5
-baseSim.node[*].nic.mac.headerLength = 24bit
-baseSim.node[*].nic.mac.slotDuration = 0.04s
-baseSim.node[*].nic.mac.difs = 0.0005s
-baseSim.node[*].nic.mac.maxTxAttempts = 14
-baseSim.node[*].nic.mac.defaultChannel = 0
-baseSim.node[*].nic.mac.bitrate = 15360bps
-baseSim.node[*].nic.mac.contentionWindow = 20
-baseSim.node[*].nic.mac.txPower = 100mW  # [mW]
+BaseNetwork.node[*].nic.mac.queueLength = 5
+BaseNetwork.node[*].nic.mac.headerLength = 24bit
+BaseNetwork.node[*].nic.mac.slotDuration = 0.04s
+BaseNetwork.node[*].nic.mac.difs = 0.0005s
+BaseNetwork.node[*].nic.mac.maxTxAttempts = 14
+BaseNetwork.node[*].nic.mac.defaultChannel = 0
+BaseNetwork.node[*].nic.mac.bitrate = 15360bps
+BaseNetwork.node[*].nic.mac.contentionWindow = 20
+BaseNetwork.node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ NETW layer parameters ####################
 
 ################ Mobility parameters #####################
 
-baseSim.node[0].mobility.x = 150
-baseSim.node[0].mobility.y = 200
-baseSim.node[0].mobility.z = 250
+BaseNetwork.node[0].mobility.x = 150
+BaseNetwork.node[0].mobility.y = 200
+BaseNetwork.node[0].mobility.z = 250
 
-baseSim.node[1].mobility.x = 250
-baseSim.node[1].mobility.y = 100
-baseSim.node[1].mobility.z = 100
+BaseNetwork.node[1].mobility.x = 250
+BaseNetwork.node[1].mobility.y = 100
+BaseNetwork.node[1].mobility.z = 100
 
-baseSim.node[2].mobility.x = 250
-baseSim.node[2].mobility.y = 200
-baseSim.node[2].mobility.z = 200
+BaseNetwork.node[2].mobility.x = 250
+BaseNetwork.node[2].mobility.y = 200
+BaseNetwork.node[2].mobility.z = 200
 
-baseSim.node[3].mobility.x = 50
-baseSim.node[3].mobility.y = 100
-baseSim.node[3].mobility.z = 110
+BaseNetwork.node[3].mobility.x = 50
+BaseNetwork.node[3].mobility.y = 100
+BaseNetwork.node[3].mobility.z = 110
 
-baseSim.node[4].mobility.x = 150
-baseSim.node[4].mobility.y = 180
-baseSim.node[4].mobility.z = 100
+BaseNetwork.node[4].mobility.x = 150
+BaseNetwork.node[4].mobility.y = 180
+BaseNetwork.node[4].mobility.z = 100
 
-baseSim.node[5].mobility.x = 50
-baseSim.node[5].mobility.y = 200
-baseSim.node[5].mobility.z = 10
+BaseNetwork.node[5].mobility.x = 50
+BaseNetwork.node[5].mobility.y = 200
+BaseNetwork.node[5].mobility.z = 10
 
 
-baseSim.node[*].nic.phy.useThermalNoise = true
-baseSim.node[*].applType = "BurstApplLayer"
-baseSim.node[*].mobType = "ConstSpeedMobility"
-baseSim.node[*].netwType = "BaseNetwLayer"
-baseSim.node[*].appl.debug = false
-baseSim.node[*].appl.headerLength = 512bit
-baseSim.node[*].net.debug = false
-baseSim.node[*].net.stats = false
-baseSim.node[*].net.headerLength = 32bit
-baseSim.node[*].appl.burstSize = 3
-baseSim.node[*].mobility.debug = false
-baseSim.node[*].mobility.speed = 1mps
-baseSim.node[*].mobility.updateInterval = 0.1s
+BaseNetwork.node[*].nic.phy.useThermalNoise = true
+BaseNetwork.node[*].applType = "BurstApplLayer"
+BaseNetwork.node[*].mobType = "ConstSpeedMobility"
+BaseNetwork.node[*].netwType = "BaseNetwLayer"
+BaseNetwork.node[*].appl.debug = false
+BaseNetwork.node[*].appl.headerLength = 512bit
+BaseNetwork.node[*].net.debug = false
+BaseNetwork.node[*].net.stats = false
+BaseNetwork.node[*].net.headerLength = 32bit
+BaseNetwork.node[*].appl.burstSize = 3
+BaseNetwork.node[*].mobility.debug = false
+BaseNetwork.node[*].mobility.speed = 1mps
+BaseNetwork.node[*].mobility.updateInterval = 0.1s
 
 
 
