--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = sim
+network = ieee802154a
 debug-on-errors = false
 fname-append-host = false
 **.module-eventlog-recording = false
@@ -18,41 +18,34 @@ cmdenv-express-mode = true
 # Otherwise the battery module will eventually lead to a simtime_t overflow
 sim-time-limit=1 d # 30s for 10000 packets
 
-sim.**.coreDebug = false
-sim.playgroundSizeX = 500 m
-sim.playgroundSizeY = 500 m 
-sim.playgroundSizeZ = 500 m
-sim.world.playgroundSizeX = 500 m
-sim.world.playgroundSizeY = 500 m
-sim.world.playgroundSizeZ = 500 m
+ieee802154a.**.coreDebug = false
+ieee802154a.playgroundSizeX = 500 m
+ieee802154a.playgroundSizeY = 500 m 
+ieee802154a.playgroundSizeZ = 500 m
 
-sim.world.useTorus = false
-sim.world.use2D = false
+ieee802154a.world.useTorus = false
+ieee802154a.world.use2D = false
 
-sim.channelControl.sendDirect = false
-sim.channelControl.pMax = 1000 mW
-sim.channelControl.sat = -100 dBm
-sim.channelControl.alpha = 2.0
-sim.channelControl.carrierFrequency = 4500e+6 Hz
+ieee802154a.channelControl.sendDirect = false
+ieee802154a.channelControl.pMax = 1000 mW
+ieee802154a.channelControl.sat = -100 dBm
+ieee802154a.channelControl.alpha = 2.0
+ieee802154a.channelControl.carrierFrequency = 4500e+6 Hz
 
 
-sim.node[*].nic.phy.usePropagationDelay = false
-sim.node[*].nic.phy.thermalNoise = 0 dBm
-sim.node[*].nic.phy.useThermalNoise = false # we use our own thermal noise model
-sim.node[*].nic.phy.timeRXToTX = 0.00021 s
-sim.node[*].nic.phy.timeRXToSleep = 0.000031 s
-sim.node[*].nic.phy.timeTXToRX = 0.00012 s
-sim.node[*].nic.phy.timeTXToSleep = 0.000032 s
-sim.node[*].nic.phy.timeSleepToRX = 0.000103 s
-sim.node[*].nic.phy.timeSleepToTX = 0.000203 s
-sim.node[*].nic.phy.PSleep = 0.01
-sim.node[*].nic.phy.PTx = 1
-sim.node[*].nic.phy.PSync = 100
-sim.node[*].nic.phy.PRx = 30
-sim.node[*].nic.phy.PSwitch = 10
-sim.node[*].nic.phy.maxTXPower = 1 mW # useless but required by BasePhyLayer
-sim.node[*].nic.phy.sensitivity = 0.1 dBm # useless but required by BasePhyLayer
-sim.node[*].nic.phy.initialRadioState = 0
+ieee802154a.node[*].nic.phy.usePropagationDelay = false
+ieee802154a.node[*].nic.phy.thermalNoise = 0 dBm
+ieee802154a.node[*].nic.phy.useThermalNoise = false # we use our own thermal noise model
+ieee802154a.node[*].nic.phy.timeRXToTX = 0.00021 s
+ieee802154a.node[*].nic.phy.timeRXToSleep = 0.000031 s
+ieee802154a.node[*].nic.phy.timeTXToRX = 0.00012 s
+ieee802154a.node[*].nic.phy.timeTXToSleep = 0.000032 s
+ieee802154a.node[*].nic.phy.timeSleepToRX = 0.000103 s
+ieee802154a.node[*].nic.phy.timeSleepToTX = 0.000203 s
+ieee802154a.node[*].nic.phy.maxTXPower = 1 mW # not used currently but required by BasePhyLayer
+ieee802154a.node[*].nic.phy.sensitivity = 0.1 dBm # useless but required by BasePhyLayer
+ieee802154a.node[*].nic.phy.initialRadioState = 0
+
 ***.debug = false
 
 **.battery.nominal = 99999mAh
@@ -66,53 +59,53 @@ sim.node[*].nic.phy.initialRadioState = 0
 **.batteryStats.detail = false
 **.batteryStats.timeSeries = false
 
-sim.node[*].nic.connectionManagerName = "channelControl"
+ieee802154a.node[*].nic.connectionManagerName = "channelControl"
 
-sim.node[*].nic.mac.headerLength = 16 bit
-sim.node[*].nic.mac.maxRetries = 1
-sim.node[0].nic.mac.stats = true
-sim.node[*].nic.mac.stats = false
-sim.node[*].nic.mac.trace = false
-sim.node[*].nic.mac.debug = false
+ieee802154a.node[*].nic.mac.headerLength = 16 bit
+ieee802154a.node[*].nic.mac.maxRetries = 1
+ieee802154a.node[0].nic.mac.stats = true
+ieee802154a.node[*].nic.mac.stats = false
+ieee802154a.node[*].nic.mac.trace = false
+ieee802154a.node[*].nic.mac.debug = false
 
-sim.node[*].app.trafficParam = 1
-sim.node[0].app.nodeAddr = 0
-sim.node[1].app.nodeAddr = 1
+ieee802154a.node[*].app.trafficParam = 1
+ieee802154a.node[0].app.nodeAddr = 0
+ieee802154a.node[1].app.nodeAddr = 1
 
-sim.node[*].app.debug = false
-sim.node[*].app.flood = false
+ieee802154a.node[*].app.debug = false
+ieee802154a.node[*].app.flood = false
 
-sim.node[*].app.stats = false
-sim.node[*].app.trace = false
-sim.node[*].app.payloadSize = 8 byte
+ieee802154a.node[*].app.stats = false
+ieee802154a.node[*].app.trace = false
+ieee802154a.node[*].app.payloadSize = 8 byte
 
 ## Nodes positions
-sim.node[0].mobility.x = 0
-sim.node[0].mobility.y = 0
-sim.node[0].mobility.z = 0
-sim.node[1].mobility.y = 0
-sim.node[1].mobility.z = 0
+ieee802154a.node[0].mobility.x = 0
+ieee802154a.node[0].mobility.y = 0
+ieee802154a.node[0].mobility.z = 0
+ieee802154a.node[1].mobility.y = 0
+ieee802154a.node[1].mobility.z = 0
 
 [Config BERDistance]
 description = "Evaluates the bit error rate as a function of distance with various channel models."
-sim.node[1].app.payloadSize = 8 byte
-sim.node[*].app.dstAddr = 0
+ieee802154a.node[1].app.payloadSize = 8 byte
+ieee802154a.node[*].app.dstAddr = 0
 **.numHosts = 2
-sim.node[1].mobility.x = ${distance=1..10 step 1, 25..100 step 25} 
-sim.node[0].app.nbPackets = 0
-sim.node[1].app.nbPackets = ${nbPackets=250}
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos}.xml")
-sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
+ieee802154a.node[1].mobility.x = ${distance=1..10 step 1, 25..100 step 25} 
+ieee802154a.node[0].app.nbPackets = 0
+ieee802154a.node[1].app.nbPackets = ${nbPackets=250}
+ieee802154a.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos}.xml")
+ieee802154a.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
 
 [Config channelPlots]
 description = "Sends one packet per channel and traces all points at reception."
-sim.node[*].app.dstAddr = 0
+ieee802154a.node[*].app.dstAddr = 0
 **.numHosts = 2
-sim.node[1].app.payloadSize = ${packetSize=120} byte
-sim.node[1].mobility.x = ${distance=10}
-sim.node[1].app.nbPackets = ${nbPackets=1}
-sim.node[0].app.nbPackets = 0
+ieee802154a.node[1].app.payloadSize = ${packetSize=120} byte
+ieee802154a.node[1].mobility.x = ${distance=10}
+ieee802154a.node[1].app.nbPackets = ${nbPackets=1}
+ieee802154a.node[0].app.nbPackets = 0
 sim-time-limit=10 s
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
-sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}-trace.xml") # sync always succeeds
-sim.node[1].nic.phy.vector-recording = true
+ieee802154a.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+ieee802154a.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}-trace.xml") # sync always succeeds
+ieee802154a.node[1].nic.phy.vector-recording = true
